2014-08-11  Per Bothner  <per@bothner.com>

	* LangPrimType.java (emitCoerceFromObject): Optimize for char or
	character if matching boxed type.

2014-08-05  Per Bothner  <per@bothner.com>

	* LispReader.java (readCharacter): Handle non-BMP characters.

2014-08-01  Per Bothner  <per@bothner.com>

	* LangPrimType.java (coerceFromObject): Convert character types
	to raw type suitable for reflection - i.e. Integer.

2014-07-27  Per Bothner  <per@bothner.com>

	* LangObjType.java: Change to extend SpecialObjectType.
	Some methods and fields moved to SpecialObjectType.

2014-07-22  Per Bothner  <per@bothner.com>

	* LangPrimType.java (stringCursorType): New 'string-cursor' type.
	* LispLanguage.java (getTypeMap):  Add 'string-cursor'.

2014-07-02  Per Bothner  <per@bothner.com>

	* LangPrimType.java (characterType, characterOrEofType): New instances.
	Add support for the new types, whose implementation type is int.
	* LispLanguage.java (getTypeMap): Update "character".
	Add binding for "character-or-eof".
	* LangObjType.java (compare): Minor tweak.

2014-06-30  Per Bothner  <per@bothner.com>

	* LangObjType.java (encodeType): New method.
	* LangPrimType.java (encodeType): New method.

2014-06-26  Per Bothner  <per@bothner.com>

	* LispReader.java (readCharacter): Better error if character
	value out of range.

2014-05-12  Per Bothner  <per@bothner.com>

	* ReadTable.java (initialize): Revert previous change.  Instead
	handle '@' as splice operator in Scheme's createReadTable.

2014-05-05  Per Bothner  <per@bothner.com>

	* ReadTable.java (initialize): Read @FOO as ($splice$ FOO).
	* LispLanguage.java (splice_str, splice_sym): New static fields.
	* ReaderQuote.java (kind): New field.
	(getKind): Return kind.
	* LispReader.java (handlePostfix): Warn for deprecated TYPE:@ syntax.
	(validPostfixLookupStart): Check for '@'.

2014-04-27  Per Bothner  <per@bothner.com>

	* LispLanguage.java (keywordsAreSelfEvaluating): New method.

2014-03-17  Per Bothner  <per@bothner.com>
